--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -142,6 +142,174 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
                     </p>
             </div>
     </div>
+	
+	<div id="product2" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - AW034SQ</h4>		
+		<img src="images/product/bathtub/bathtub_09.jpg">
+			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p >
+                    <p class="product-weight" style="color: white;">
+                         (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+    </div>
+    
+	<div id="product3" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - AW003AQ</h4>		
+		<img src="images/product/bathtub/bathtub_08.jpg">
+			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p >
+                    <p class="product-weight" style="color: white;">
+                         (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+    </div>
+	
+	<div id="product4" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - AK229</h4>		
+		<img src="images/product/bathtub/bathtub_07.jpg">
+			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p >
+                    <p class="product-weight" style="color: white;">
+                         (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+    </div>
+	
+	<div id="product5" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - A1706</h4>		
+		<img src="images/product/bathtub/bathtub_06.jpg">
+			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p >
+                    <p class="product-weight" style="color: white;">
+                         (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+    </div>
+	
+	<div id="product6" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - A1506Q</h4>		
+		<img src="images/product/bathtub/bathtub_05.jpg">
+			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p >
+                    <p class="product-weight" style="color: white;">
+                         (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+    </div>
+	
+	<div id="product7" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - A033TQ </h4>		
+		<img src="images/product/bathtub/bathtub_04.jpg">
+			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p >
+                    <p class="product-weight" style="color: white;">
+                         (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+    </div>
+	
+	<div id="product8" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - A003AQ</h4>		
+		<img src="images/product/bathtub/bathtub_03.jpg">
+			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p >
+                    <p class="product-weight" style="color: white;">
+                         (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+    </div>
+	
+	<div id="product9" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - A001Q</h4>		
+		<img src="images/product/bathtub/bathtub_02.jpg">
+			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p >
+                    <p class="product-weight" style="color: white;">
+                         (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
+    </div>
     
 
 
@@ -162,7 +330,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
 		<img src="images/product/eye.png" class="producticons" style="padding-left: 67px; padding-top: 3px;" >
 		<img src="images/product/pushcart.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
 		<img src="images/product/share.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
-		<a class="fancybox" href="#product1" rel='external'>
+		<a class="fancybox" href="#product2" rel='external'>
 			<p class='title' style="font-family: 'Calibri'; font-size: 17px;; padding-left: 80px; padding-top: 42px; " >Bathrub - AW034SQ</p>
 		</a>
 	</div>
@@ -172,7 +340,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
 		<img src="images/product/eye.png" class="producticons" style="padding-left: 67px; padding-top: 3px;" >
 		<img src="images/product/pushcart.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
 		<img src="images/product/share.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
-		<a class="fancybox" href="#product1" rel='external'>
+		<a class="fancybox" href="#product3" rel='external'>
 			<p class='title' style="font-family: 'Calibri'; font-size: 17px;; padding-left: 80px; padding-top: 42px; " >Bathrub - AW003AQ</p>
 		</a>
 	</div>
@@ -183,7 +351,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
 		<img src="images/product/eye.png" class="producticons" style="padding-left: 67px; padding-top: 3px;" >
 		<img src="images/product/pushcart.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
 		<img src="images/product/share.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
-		<a class="fancybox" href="#product1" rel='external'>
+		<a class="fancybox" href="#product4" rel='external'>
 			<p class='title' style="font-family: 'Calibri'; font-size: 17px;; padding-left: 80px; padding-top: 42px; " >Bathrub - AK229</p>
 		</a>
 	</div>
@@ -193,7 +361,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
 		<img src="images/product/eye.png" class="producticons" style="padding-left: 67px; padding-top: 3px;" >
 		<img src="images/product/pushcart.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
 		<img src="images/product/share.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
-		<a class="fancybox" href="#product1" rel='external'>
+		<a class="fancybox" href="#product5" rel='external'>
 			<p class='title' style="font-family: 'Calibri'; font-size: 17px;; padding-left: 80px; padding-top: 42px; " >Bathrub - A1706</p>
 		</a>
 	</div>
@@ -204,7 +372,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
 		<img src="images/product/eye.png" class="producticons" style="padding-left: 67px; padding-top: 3px;" >
 		<img src="images/product/pushcart.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
 		<img src="images/product/share.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
-		<a class="fancybox" href="#product1" rel='external'>
+		<a class="fancybox" href="#product6" rel='external'>
 			<p class='title' style="font-family: 'Calibri'; font-size: 17px;; padding-left: 80px; padding-top: 42px; " >Bathrub - A1506Q</p>
 		</a>
 	</div>
@@ -215,7 +383,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
 		<img src="images/product/eye.png" class="producticons" style="padding-left: 67px; padding-top: 3px;" >
 		<img src="images/product/pushcart.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
 		<img src="images/product/share.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
-		<a class="fancybox" href="#product1" rel='external'>
+		<a class="fancybox" href="#product7" rel='external'>
 			<p class='title' style="font-family: 'Calibri'; font-size: 17px;; padding-left: 80px; padding-top: 42px; ">Bathrub - A033TQ</p>
 		</a>
 	</div>
@@ -226,7 +394,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
 		<img src="images/product/eye.png" class="producticons" style="padding-left: 67px; padding-top: 3px;" >
 		<img src="images/product/pushcart.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
 		<img src="images/product/share.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
-		<a class="fancybox" href="#product1" rel='external'>
+		<a class="fancybox" href="#product8" rel='external'>
 			<p class='title' style="font-family: 'Calibri'; font-size: 17px;; padding-left: 80px; padding-top: 42px; " >Bathrub - A003AQ</p>
 		</a>
 	</div>
@@ -235,7 +403,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
 		<img src="images/product/eye.png" class="producticons" style="padding-left: 67px; padding-top: 3px;" >
 		<img src="images/product/pushcart.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
 		<img src="images/product/share.png" class="producticons" style="padding-left: 27px; padding-top: 3px;" >
-		<a class="fancybox" href="#product1" rel='external'>
+		<a class="fancybox" href="#product9" rel='external'>
 			<p class='title' style="font-family: 'Calibri'; font-size: 17px;; padding-left: 80px; padding-top: 42px; " >Bathrub - A001Q</p>
 		</a>
 	</div>
