--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -290,7 +290,7 @@ $(document).ready(function(){
 	});	
 
 	$('#saveresources').hover(function() {
-		$(this).attr('src', 'images/Ecovative/Ecovative Main Page/Save Resources.png');
+		$(this).attr('src', 'images/Ecovative/Ecovative Main Page/Save (Hover).png');
 		$('#saveresourcescaption').show();
 		}, function() {
 		$(this).attr('src', 'images/Ecovative/Ecovative Main Page/Save Resources.png');
